# genome-scope

./: .gitignore  README.md  run.sh
backend/: pyproject.toml
backend/src/genomescope/: __init__.py  benchmark.py  pipeline.py  report_cli.py  training_log.py
backend/src/genomescope/analysis/: evaluate.py  promoters.py  report.py
backend/src/genomescope/api/: server.py
backend/src/genomescope/data/: annotations.py  builtin_tsg.py  fasta.py  probes.py  symbols.py  tcga.py
backend/src/genomescope/hmm/: baum_welch.py  beta_model.py  checkpoint.py  forward_backward.py  model.py  viterbi.py
backend/src/genomescope/scripts/: build_subset_manifest.py  download_data.py  ensemble.py  full_genome_run.py  story_full_chr21.py
backend/tests/: test_annotations.py  test_baum_welch.py  test_beta_model.py  test_checkpoint.py  test_evaluate.py  test_fasta.py  test_forward_backward.py  test_hmm_model.py  test_promoters.py  test_report.py  test_symbols.py  test_tcga.py  test_training_log.py  test_viterbi.py
frontend/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  template.tsx
frontend/app/dashboard/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: GenomicTrack.tsx  IslandDetailInline.tsx  ModelsPanel.tsx  Stat.tsx  UploadPanel.tsx
frontend/components/panels/: FullGenomePanel.tsx  MetricsPanel.tsx  ReportTable.tsx  TSGPanel.tsx  TrackPanel.tsx
frontend/components/ui/: Card.tsx  StatusDot.tsx
frontend/lib/: api.ts  hooks.ts
scripts/: genomescope.daily.plist.template
