[project]
name = "genomescope"
version = "0.1.0"
description = "HMM-based CpG island detector with Beta methylation emissions"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "biopython>=1.83",
    "pandas>=2.2",
    "pyranges>=0.1",
    "scikit-learn>=1.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "requests>=2.32",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genomescope"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
